1.5/YAML/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: netology-net-2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: netologyingress.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontback-service
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: frontback-service
            port:
              number: 9002
